[ABW]: .orig updated with tavern indent typical differences accepted: rebranding, future cashout, pending payout, post_id

--- a/hivemind/tavern/tags_api_patterns/get_discussions_by_blog/author_tag.tavern.yaml
+++ b/hivemind/tavern/tags_api_patterns/get_discussions_by_blog/author_tag.tavern.yaml
@@ -3,6 +3,8 @@
 
   marks:
     - patterntest
+    - failing
+    - xfail # escaping (it is really wrong, influences size as well and wrong size suggests what was expected, that is, the skipped escaping is interpreted as no escape)
 
   includes:
     - !include ../../common.yaml
