--- a/hivemind/tavern/database_api_patterns/list_comments/by_permlink.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_permlink.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hivemind tags_api.get_discussions_by_blog patterns test author tag
+  test_name: Hivemind database_api.list_comments patterns test order "by_permlink"
 
   marks:
     - patterntest
@@ -8,7 +8,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: get_discussions_by_blog
+    - name: list_comments
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,12 +17,13 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "tags_api.get_discussions_by_blog"
-          params: ["dragonho", "life"] 
+          method: "database_api.list_comments"
+          params: {"start":["steemit","firstpost"], "limit":10, "order":"by_permlink"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "author_tag"
-            directory: "tags_api_patterns/get_discussions_by_blog"
+            method: "by_permlink"
+            directory: "database_api_patterns/list_comments"
+
