[ABW]: removed files related to condenser_api::get_accounts call (for hived, not HM; tests deactivated earlier) removed tags_api duplicate tests that were moved to separate subfolders earlier due to changed behaviour in get_comment_discussions_by_payout (when start author/permlink is passed post has to be found) two tests moved to negative added .orig files for new tests accepted typical differences: rebranding, future cashout time, pending payout, post id; also some test patterns corrected manually since differences in pending payouts made them incomparable with original (order by payout) some patterns reordered by key; also indent changed to two spaces

--- a/hivemind/tavern/tags_api_negative/get_comment_discussions_by_payout/author.tavern.yaml
+++ b/hivemind/tavern/tags_api_negative/get_comment_discussions_by_payout/author.tavern.yaml
@@ -2,9 +2,8 @@
   test_name: Hivemind tags_api.get_comment_discussions_by_payout patterns test author
 
   marks:
-    - patterntest
-    # does not work correctly, start_author does not matter in sorting
-    # take only comments with payouts
+    - patterntest # changed behaviour so when either start_author or start_permlink is passed, both have to be passed and point to actual post
+    - negative
 
   includes:
     - !include ../../common.yaml
@@ -27,4 +26,5 @@
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
             method: "author"
-            directory: "tags_api_patterns/get_comment_discussions_by_payout"
+            directory: "tags_api_negative/get_comment_discussions_by_payout"
+            error_response: true
