--- a/hivemind/tavern/tags_api_negative/get_comment_discussions_by_payout/good_permlink.tavern.yaml
+++ b/hivemind/tavern/tags_api_negative/get_comment_discussions_by_payout/good_permlink.tavern.yaml
@@ -2,8 +2,8 @@
   test_name: Hivemind tags_api.get_comment_discussions_by_payout patterns test good permlink
 
   marks:
-    - patterntest
-    # returns empty result even if permlink is correct
+    - patterntest # changed behaviour so when either start_author or start_permlink is passed, both have to be passed and point to actual post
+    - negative
 
   includes:
     - !include ../../common.yaml
@@ -26,4 +26,5 @@
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
             method: "good_permlink"
-            directory: "tags_api_patterns/get_comment_discussions_by_payout"
+            directory: "tags_api_negative/get_comment_discussions_by_payout"
+            error_response: true
