--- a/hivemind/tavern/tags_api_patterns/get_comment_discussions_by_payout/author_permlink.tavern.yaml
+++ b/hivemind/tavern/tags_api_patterns/get_comment_discussions_by_payout/author_permlink.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind tags_api.get_comment_discussions_by_payout patterns test author permlink
 
   marks:
-    - patterntest
+    - patterntest # differences in pending payout make it incomparable with original (also order of comments with the same payout was basically random)
     # does not work correctly, start_author and start_permlink does not matter
 
   includes:
