--- a/hivemind/tavern/bridge_api_negative/get_discussion/not_existing_permlink.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_discussion/not_existing_permlink.tavern.yaml
@@ -1,7 +1,6 @@
 ---
-  test_name: Hivemind bridge_api.get_community_context patterns test # 8080
-    # not documented on https://developers.hive.io/apidefinitions/#apidefinitions-bridge
-    # no communities for 5mln set
+  test_name: Hivemind bridge_api.get_discussion non existing permlink patterns test
+      # not documented on https://developers.hive.io/apidefinitions/#apidefinitions-bridge
 
   marks:
     - patterntest
@@ -20,13 +19,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "bridge.get_community_context"
-          params: {"account": "steemit","name": "Hive Gaming"}
+          method: "bridge.get_discussion"
+          params: {"author":"gtg", "permlink":"not_existing_permlink"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "get_community_context_community_not_found"
-            directory: "bridge_api_negative/get_community_context"
-            error_response: true
+            method: "not_existing_permlink"
+            directory: "bridge_api_negative/get_discussion"
