--- a/hivemind/tavern/condenser_api_negative/get_blog/non_existing.tavern.yaml
+++ b/hivemind/tavern/condenser_api_negative/get_blog/non_existing.tavern.yaml
@@ -2,8 +2,10 @@
   test_name: Hivemind condenser_api.get_blog non existing account test
 
   marks:
-    - patterntest # wrong response, should be clean error (now there is no way to make difference between nonexisting account and account that does not blog)
+    - patterntest
     - negative
+    - failing
+    - xfail # wrong response, should be clean error (now there is no way to make difference between nonexisting account and account that does not blog)
 
   includes:
     - !include ../../common.yaml
