--- a/hivemind/tavern/condenser_api_patterns/get_content_replies/gtg.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_content_replies/gtg.tavern.yaml
@@ -24,5 +24,5 @@
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "replies"
-            directory: "condenser_api_patterns/get_content"
+            method: "gtg"
+            directory: "condenser_api_patterns/get_content_replies"
