--- a/hivemind/tavern/condenser_api_patterns/get_trending_tags/limit_250.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_trending_tags/limit_250.tavern.yaml
@@ -2,9 +2,7 @@
   test_name: Hivemind condenser_api.get_trending_tags limit 250 patterns test
 
   marks:
-    - patterntest # there is random order in some elements of original answer, not comparable to original due to ordering influenced by different pending payouts
-    - failing
-    - xfail # 4 categories different, in particular some fairly popular not present in original (to be investigated)
+    - patterntest # not comparable to original due to ordering influenced by different pending payouts (also order of tags with the same payout was basically random) 
 
   includes:
     - !include ../../common.yaml
