--- a/hivemind/tavern/condenser_api_negative/get_discussions_by_comments/unexpected_keyword.tavern.yaml
+++ b/hivemind/tavern/condenser_api_negative/get_discussions_by_comments/unexpected_keyword.tavern.yaml
@@ -4,7 +4,8 @@
   marks:
     - patterntest
     - negative
-    # while this would be acceptable we should change it to invalid parameters over server error (code suggests we wanted to completely silence that, but rest passes is as generic error, old code was the same so...)
+    - failing
+    - xfail # while this would be acceptable we should change it to invalid parameters over server error (code suggests we wanted to completely silence that, but rest passes is as generic error, old code was the same so...)
 
   includes:
     - !include ../../common.yaml
