--- a/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/limit_20.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/limit_20.tavern.yaml
@@ -2,8 +2,9 @@
   test_name: Hivemind condenser_api.get_post_discussions_by_payout limit 20 test
 
   marks:
-    - patterntest # differences in pending payout make it incomparable with original
-                  # pattern needs to be ordered first but there are bigger differences
+    - patterntest # differences in pending payout make it incomparable with original (also order of comments with the same payout was basically random)
+    - failing
+    - xfail # extra vote comes from the lack of muting functionality
 
   includes:
     - !include ../../common.yaml
