--- a/hivemind/tavern/condenser_api_patterns/get_comment_discussions_by_payout/limit_100.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_comment_discussions_by_payout/limit_100.tavern.yaml
@@ -2,8 +2,7 @@
   test_name: Hivemind condenser_api.get_comment_discussions_by_payout limit 100 test
 
   marks:
-    - patterntest # differences in pending payout make it incomparable with original
-    - negative    # pattern needs to be ordered first but there are bigger differences
+    - patterntest # differences in pending payout make it incomparable with original (also order of comments with the same payout was basically random)
 
   includes:
     - !include ../../common.yaml
