--- a/hivemind/tavern/database_api_patterns/list_votes/by_voter_comment_author_permlink.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_votes/by_voter_comment_author_permlink.tavern.yaml
@@ -3,6 +3,8 @@ test_name: Hivemind database_api.list_votes patterns test order "by_voter_commen
 
 marks:
   - patterntest # show "voter": "nxt2" votes, not connected with author and permlink (like no data)
+  - failing
+  - xfail # order of votes on CI is consistently different than order on steemdev
 
 includes:
   - !include ../../common.yaml
