[ABW]: fixed order of votes - patterns corrected to reflect that

--- a/hivemind/tavern/database_api_patterns/find_votes/all_data.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/find_votes/all_data.tavern.yaml
@@ -21,7 +21,7 @@ stages:
         params:
           {
             "author": "kental",
-            "permlink": "hi-steem-my-russian-trip-on-the-bike-big-party-in-moscow-tour-of-moscow-by-slava",
+            "permlink": "hi-steem-my-russian-trip-on-the-bike-big-party-in-moscow-tour-of-moscow-by-slava"
           }
     response:
       status_code: 200
