--- a/hivemind/tavern/bridge_api_negative/get_ranked_posts/invalid_sort.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_ranked_posts/invalid_sort.tavern.yaml
@@ -1,15 +1,15 @@
 ---
-  test_name: bridge_api.list_pop_communities invalid request error # 8080
+  test_name: Hivemind bridge_api.get_ranked_posts sort invalid patterns test
 
   marks:
-    - patterntest # change to proper error, server error is barely acceptable here
+    - patterntest
     - negative
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: bridge_api.list_pop_communities invalid request error
+    - name: bridge_api.get_ranked_posts sort invalid patterns test
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -18,13 +18,13 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "bridge.list_pop_communities"
-          params: ["25"]
+          method: "bridge.get_ranked_posts"
+          params: {"sort":"invalid_sort","tag":"","observer":"steemit"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "invalid_request_error"
-            directory: "bridge_api_negative/list_pop_communities"
+            method: "invalid_sort"
+            directory: "bridge_api_negative/get_ranked_posts"
             error_response: true
