--- a/hivemind/tavern/bridge_api_negative/list_pop_communities/invalid_literal.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/list_pop_communities/invalid_literal.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: bridge_api.list_pop_communities invalid literal # 8080 023
 
   marks:
-    - patterntest
+    - patterntest # change to proper error, server error is barely acceptable here
     - negative
 
   includes:
